Bug 346547 - Kst crashes when typing the square bracket [] characters
Summary: Kst crashes when typing the square bracket [] characters
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.8
Platform: Compiled Sources Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-24 10:16 UTC by Ben Lewis
Modified: 2016-02-25 02:00 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Lewis 2015-04-24 10:16:00 UTC
Kst crashes when typing the square bracket characters into any text box that supports the display of scalars, e.g. a label or axis label.

Examples of strings that cause a crash are:
[]
\[\]
\[V\]
Voltage \[V\]

Reproducible: Always

Steps to Reproduce:
1.Start a new Kst session
2.Create a vector with 10 samples from 0..9. Create > Vector > Generate > OK
3.Create a curve with the generated vector as both the x and y axis vectors. Create > Curve > Place in New Plot > Ok
4. Save the Kst session, close and reopen the file. This step is important. It does not crash unless this step is done.
5. Edit the bottom axis of the plot. Right click on plot > Edit > Labels > Untick bottom label "Auto"
6. Enter the following characters "[]"
7. Crash

Actual Results:  
Crash

Expected Results:  
No crash

As a work around the required characters can be pasted into the text box. e.g. pasting "\[V\]" does not cause a crash but typing it will.
Comment 1 Netterfield 2016-02-25 02:00:19 UTC
Git commit e3df7295b67ab1c35f6d3f76fe3d64fe48f21d7a by Barth Netterfield.
Committed on 25/02/2016 at 01:41.
Pushed by netterfield into branch 'master'.

Crashing is bad.  Don't.

M  +3    -0    src/widgets/cclineedit.cpp

http://commits.kde.org/kst-plot/e3df7295b67ab1c35f6d3f76fe3d64fe48f21d7a