Crashing is bad.  Don't.

BUG: 346547